# jax-mlx

./: .clang-tidy  .gitignore  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  PLAN.md  README.md  pyproject.toml
.benchmarks/: 2026-03-08T17-02-22_7d0ce60.json  2026-03-08T18-03-42_a3c4dd7.json
.github/workflows/: build.yml
scripts/: benchmark.sh  benchmark_compare.py  count_ops.py  jax_tests.sh  release.sh  setup_deps.sh  summarize_jax_tests.py
src/jax_plugins/mlx/: __init__.py
src/jax_plugins/mps/: __init__.py
src/pjrt_plugin/: issue_url.h  logging.h  mlx_buffer.cc  mlx_buffer.h  mlx_client.cc  mlx_client.h  mlx_device.cc  mlx_device.h  mlx_executable.cc  mlx_executable.h  mlx_type_utils.cc  mlx_type_utils.h  pjrt_api.cc  pjrt_buffer.cc  pjrt_client.cc  pjrt_device.cc  pjrt_executable.cc  pjrt_memory.cc  pjrt_topology.cc  pjrt_types.h  stablehlo_parser.cc
src/pjrt_plugin/ops/: shape_ops.mm
tests/: test_benchmark.py  test_ops.py
tests/configs/: benchmark.py  flax.py  linalg.py  matmul.py  numpyro.py  random.py  shape.py  slice.py  util.py
